--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,8 +1,8 @@
-* {
+/* * {
   background-color: rgba(0, 153, 255, 0.15);
   border-radius: 2px;
   border: 1px solid #0099ff;
-}
+} */
 
 html {
   font-family: sans-serif;
